--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="index-image-wrapper"> <!-- Added a new wrapper class -->
         <img src="images/billy clubs.png" alt="Product 3">
     </div>
-    <h3>Custom Cosplay Commission</h3>
+    <h3>Daredevil Billy Clubs</h3>
     <p class="price">£36</p>
   </div>
 </section>
