--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
   </div>
 
   <!-- Updated Product Card 3 -->
-  <div class="product-card" onclick="openProduct('product3.html')">
+ <div class="product-card" onclick="openProduct('product3.html')">
     <div class="index-image-wrapper"> <!-- Added a new wrapper class -->
-        <img src="images/billy clubs.png" alt="Product 3">
+        <img src=".\Images\billy clubs.png" alt="Daredevil Billy Clubs">
     </div>
     <h3>Daredevil Billy Clubs</h3>
     <p class="price">£36</p>
