--- a/product2.html
+++ b/product2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bucky Arm - ForgePrints</title> <!-- Added a specific title -->
+  <title>Bucky Arm - Layercraft Studio</title> <!-- Added a specific title -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
