--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,17 @@
             <a href="index.html">
                 <img src="./Logo/layercraft studio logo.png" class="header-logo" alt="Layercraft Studio Home">
             </a>
-        </h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Store</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="#">Store</a>
+        <a href="contact.html">Contact</a>
         <button id="dark-toggle">🌙</button>
+  </nav>
+</header>
+
+        </h1>
+        
+        
     </header>
 
 <main class="contact-container">
