--- a/product1.html
+++ b/product1.html
@@ -8,13 +8,22 @@
 </head>
 <body>
 
-    <header>
+   <header>
         <h1 class="logo">
             <a href="index.html">
                 <img src="./Logo/layercraft studio logo.png" class="header-logo" alt="Layercraft Studio Home">
             </a>
-        </h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="#">Store</a>
+        <a href="contact.html">Contact</a>
         <button id="dark-toggle">🌙</button>
+  </nav>
+</header>
+
+        </h1>
+        
+        
     </header>
 
 <!-- The section where the product details are laid out -->
