--- a/product2.html
+++ b/product2.html
@@ -8,14 +8,18 @@
 </head>
 <body>
 
-    <header>
+   <header>
         <h1 class="logo">
             <a href="index.html">
                 <img src="./Logo/layercraft studio logo.png" class="header-logo" alt="Layercraft Studio Home">
             </a>
-        </h1>
-        <button id="dark-toggle">🌙</button>
-    </header>
+        <nav>
+        <a href="index.html">Home</a>
+        <a href="#">Store</a>
+        <a href="contact.html">Contact</a>
+    <button id="dark-toggle">🌙</button>
+  </nav>
+</header>
 
 <!-- The section where the product details are laid out -->
 <section class="product-page">
