--- a/product3.html
+++ b/product3.html
@@ -13,9 +13,13 @@
             <a href="index.html">
                 <img src="./Logo/layercraft studio logo.png" class="header-logo" alt="Layercraft Studio Home">
             </a>
-        </h1>
-        <button id="dark-toggle">🌙</button>
-    </header>
+        <nav>
+        <a href="index.html">Home</a>
+        <a href="#">Store</a>
+        <a href="contact.html">Contact</a>
+    <button id="dark-toggle">🌙</button>
+  </nav>
+</header>
 
 <!-- The section where the product details are laid out -->
 <section class="product-page">
