--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </a>
   <nav>
     <a href="index.html">Home</a>
-    <a href="#">Store</a>
+    <a href="store.html">Store</a>
     <a href="contact.html">Contact</a>
     <button id="dark-toggle">🌙</button>
   </nav>
@@ -39,12 +39,12 @@
     <div class="index-image-wrapper"> <!-- Added a new wrapper class -->
         <img src=".\Images\bucky.png" alt="Bucky Arm">
     </div>
-    <h3>Bucky Arm (Mini Model)</h3>
+    <h3>Bucky Arm</h3>
     <p class="price">£28</p>
   </div>
 
   <!-- Updated Product Card 3 -->
- <div class="product-card" onclick="openProduct('product3.html')">
+  <div class="product-card" onclick="openProduct('product3.html')">
     <div class="index-image-wrapper"> <!-- Added a new wrapper class -->
         <img src=".\Images\billy clubs.png" alt="Daredevil Billy Clubs">
     </div>
