--- a/store.html
+++ b/store.html
@@ -8,18 +8,16 @@
 </head>
 <body>
 
-    <header>
+   <header>
         <h1 class="logo">
             <a href="index.html">
                 <img src="./Logo/layercraft studio logo.png" class="header-logo" alt="Layercraft Studio Home">
             </a>
-        </h1>
     <nav>
         <a href="index.html">Home</a>
-        <!-- Ensure this link points to your new store page -->
-        <a href="store.html">Store</a> 
+        <a href="#">Store</a>
         <a href="contact.html">Contact</a>
-        <button id="dark-toggle">🌙</button>
+    <button id="dark-toggle">🌙</button>
   </nav>
 </header>
 
