--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   <h1 class="logo"> <a href="index.html">
     <img src="./Logo/layercraft studio logo.png" class="header-logo" alt="Layercraft Studio Home">
 </a>
-  <nav>
+  <nav id="navbar-links"> <!-- 1. ADD THIS ID -->
     <a href="index.html">Home</a>
     <a href="store.html">Store</a>
     <a href="contact.html">Contact</a>
     <button id="dark-toggle">🌙</button>
-  </nav>
+    <!-- 2. ADD THIS HAMBURGER BUTTON -->
+    <button id="menu-toggle" onclick="toggleMenu()">☰</button> 
+</nav>
 </header>
 
 <section class="hero">
