--- a/store.html
+++ b/store.html
@@ -8,17 +8,19 @@
 </head>
 <body>
 
-   <header>
+    <header>
         <h1 class="logo">
             <a href="index.html">
                 <img src="./Logo/layercraft studio logo.png" class="header-logo" alt="Layercraft Studio Home">
             </a>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="#">Store</a>
-        <a href="contact.html">Contact</a>
+    <nav id="navbar-links"> <!-- 1. ADD THIS ID -->
+    <a href="index.html">Home</a>
+    <a href="store.html">Store</a>
+    <a href="contact.html">Contact</a>
     <button id="dark-toggle">🌙</button>
-  </nav>
+    <!-- 2. ADD THIS HAMBURGER BUTTON -->
+    <button id="menu-toggle" onclick="toggleMenu()">☰</button> 
+</nav>
 </header>
 
 <main>
@@ -37,14 +39,14 @@
 
         <!-- Product Card 2: Example Product 2 (Add as many as you need) -->
         <div class="product-card">
-            <img src="./Images/bucky.png" alt="Bucky Arm">
+            <img src="./images/bucky.png" alt="Bucky Arm">
             <p>Bucky Arm</p>
             <p class="price">£25.00</p>
         </div>
 
          <!-- Product Card 3: Example Product 3 -->
         <div class="product-card">
-            <img src="./Images/billy clubs.png" alt="Daredevil Billy Clubs">
+            <img src="./images/billy clubs.png" alt="Daredevil Billy Clubs">
             <p>Daredevil Billy Clubs</p>
             <p class="price">£36</p>
         </div>
