--- a/product2.html
+++ b/product2.html
@@ -8,17 +8,19 @@
 </head>
 <body>
 
-   <header>
+    <header>
         <h1 class="logo">
             <a href="index.html">
                 <img src="./Logo/layercraft studio logo.png" class="header-logo" alt="Layercraft Studio Home">
             </a>
-        <nav>
-        <a href="index.html">Home</a>
-        <a href="#">Store</a>
-        <a href="contact.html">Contact</a>
+        <nav id="navbar-links"> <!-- 1. ADD THIS ID -->
+    <a href="index.html">Home</a>
+    <a href="store.html">Store</a>
+    <a href="contact.html">Contact</a>
     <button id="dark-toggle">🌙</button>
-  </nav>
+    <!-- 2. ADD THIS HAMBURGER BUTTON -->
+    <button id="menu-toggle" onclick="toggleMenu()">☰</button> 
+</nav>
 </header>
 
 <!-- The section where the product details are laid out -->
