--- a/store.html
+++ b/store.html
@@ -9,17 +9,15 @@
 <body>
 
     <header>
-        <h1 class="logo">
-            <a href="index.html">
-                <img src="./Logo/layercraft studio logo.png" class="header-logo" alt="Layercraft Studio Home">
-            </a>
-    <nav id="navbar-links"> <!-- 1. ADD THIS ID -->
+  <h1 class="logo"> <a href="index.html">
+    <img src="./Logo/layercraft studio logo.png" class="header-logo" alt="Layercraft Studio Home">
+</a>
+  <nav id="navbar-links"> <!-- 1. ADD THIS ID -->
     <a href="index.html">Home</a>
     <a href="store.html">Store</a>
     <a href="contact.html">Contact</a>
-    <button id="dark-toggle">🌙</button>
-    <!-- 2. ADD THIS HAMBURGER BUTTON -->
     <button id="menu-toggle" onclick="toggleMenu()">☰</button> 
+    <button id="dark-toggle">🌙</button>
 </nav>
 </header>
 
