--- a/store.html
+++ b/store.html
@@ -37,14 +37,14 @@
 
         <!-- Product Card 2: Example Product 2 (Add as many as you need) -->
         <div class="product-card">
-            <img src="./images/bucky.png" alt="Bucky Arm">
+            <img src="./Images/bucky.png" alt="Bucky Arm">
             <p>Bucky Arm</p>
             <p class="price">£25.00</p>
         </div>
 
          <!-- Product Card 3: Example Product 3 -->
         <div class="product-card">
-            <img src="./images/billy clubs.png" alt="Daredevil Billy Clubs">
+            <img src="./Images/billy clubs.png" alt="Daredevil Billy Clubs">
             <p>Daredevil Billy Clubs</p>
             <p class="price">£36</p>
         </div>
